--- a/.editorconfig
+++ b/.editorconfig
@@ -10,3 +10,18 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 max_line_length = 120
+
+[*.md]
+trim_trailing_whitespace = false
+
+[CMakeLists.txt]
+indent_size = 8
+tab_width = 8
+
+[*.cmake]
+indent_size = 8
+tab_width = 8
+
+[*.{cxx,hxx}]
+indent_size = 4
+tab_width = 4
