[logenium(application)] added windows application variant

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,8 @@ add_executable(
         src/main.cxx
 
         src/application.cxx
+
+        src/platform/windows/application.cxx
 )
 
 target_compile_features(
