[debug] added debug library
[logenium] use assert from debug library
[xheader] added win32 api debug api stubs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,4 +58,11 @@ target_link_libraries(
         logenium
         PRIVATE
         xheader
+        logenium::debug
+)
+
+target_compile_definitions(
+        logenium
+        PRIVATE
+        __LOGENIUM_SOURCE__
 )
