--- a/.editorconfig
+++ b/.editorconfig
@@ -22,8 +22,17 @@ indent_size = 8
 tab_width = 8
 
 [*.c]
+indent_size = 4
+tab_width = 4
+
 [*.cxx]
+indent_size = 4
+tab_width = 4
+
 [*.h]
+indent_size = 4
+tab_width = 4
+
 [*.hxx]
 indent_size = 4
 tab_width = 4
@@ -33,7 +42,26 @@ indent_size = 4
 tab_width = 4
 
 [.clangd]
+indent_size = 2
+tab_width = 2
+
 [.clang-tidy]
+indent_size = 2
+tab_width = 2
+
 [.clang-format]
 indent_size = 2
 tab_width = 2
+
+[*.py]
+indent_size = 4
+tab_width = 4
+
+[*.pyi]
+indent_size = 4
+tab_width = 4
+
+[*.bat]
+indent_size = 4
+tab_width = 4
+end_of_line = crlf
