--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,2 +1,5 @@
+# SPDX-FileCopyrightText: 2025 Logenium Authors and Contributors
+# SPDX-License-Identifier: BSD-3-Clause
+
 add_subdirectory(xheader)
 add_subdirectory(debug)
