[devutils] added parallel processing to the lint command

--- a/devutils/pyproject.toml
+++ b/devutils/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
     "Programming Language :: Python :: 3.14",
 ]
 
-dependencies = ["typer>=0.20.1"]
+dependencies = ["typer>=0.20.1", "pyyaml>=6.0.3", "types-pyyaml>=6.0.12.20250915"]
 
 [project.scripts]
 logenium-devutils = "devutils.__main__:app"
