--- a/devutils/pyproject.toml
+++ b/devutils/pyproject.toml
@@ -53,3 +53,23 @@ strict = true
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_any_unimported = true
+disallow_any_expr = true
+disallow_any_decorated = true
+disallow_any_explicit = true
+disallow_any_generics = true
+disallow_subclassing_any = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+no_implicit_reexport = true
+no_implicit_optional = true
+strict_equality = true
+extra_checks = true
+show_error_codes = true
+show_column_numbers = true
+pretty = true
