[xheader] implement x11 and wayland crossplatform headers and stubs

--- a/libs/xheader/CMakeLists.txt
+++ b/libs/xheader/CMakeLists.txt
@@ -51,6 +51,27 @@ add_library(
 
         src/dlfcn/dlopen.c
         src/dlfcn/dlclose.c
+
+        src/xcb/xcb/xcb_connect.c
+        src/xcb/xcb/xcb_connection_has_error.c
+        src/xcb/xcb/xcb_disconnect.c
+        src/xcb/xcb/xcb_flush.c
+        src/xcb/xcb/xcb_generate_id.c
+        src/xcb/xcb/xcb_get_setup.c
+        src/xcb/xcb/xcb_wait_for_event.c
+        src/xcb/xproto/xcb_create_window.c
+        src/xcb/xproto/xcb_destroy_window.c
+        src/xcb/xproto/xcb_map_window.c
+        src/xcb/xproto/xcb_setup_roots_iterator.c
+
+        src/internal/xdg-shell-protocol.c
+        src/internal/xdg-decoration-unstable-v1-protocol.c
+
+        src/wayland-client-protocol/wl_registry_interface.c
+        src/wayland-client-protocol/wl_compositor_interface.c
+        src/wayland-client-protocol/wl_shm_interface.c
+        src/xdg-shell/xdg_wm_base_interface.c
+        src/xdg-decoration/zxdg_decoration_manager_v1_interface.c
 )
 
 add_library(
@@ -73,6 +94,8 @@ target_link_libraries(
         xheader
         PUBLIC
         $<$<PLATFORM_ID:Linux>:dl>
+        $<$<PLATFORM_ID:Linux>:xcb>
+        $<$<PLATFORM_ID:Linux>:wayland-client>
 )
 
 if(LOGENIUM_XHEADER_BUILD_TESTS AND LOGENIUM_BUILD_TESTS)
