--- a/libs/xheader/tests/xcb/CMakeLists.txt
+++ b/libs/xheader/tests/xcb/CMakeLists.txt
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2025 Logenium Authors and Contributors
+# SPDX-License-Identifier: BSD-3-Clause
+
 add_subdirectory(xcb)
 add_subdirectory(xproto)
 
