--- a/libs/xheader/tests/dlfcn/CMakeLists.txt
+++ b/libs/xheader/tests/dlfcn/CMakeLists.txt
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2025 Logenium Authors and Contributors
+# SPDX-License-Identifier: BSD-3-Clause
+
 add_executable(
         xheader_dlfnc_tests
         ${CMAKE_CURRENT_SOURCE_DIR}/dlopen.cxx
