--- a/libs/xheader/tests/windows/CMakeLists.txt
+++ b/libs/xheader/tests/windows/CMakeLists.txt
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2025 Logenium Authors and Contributors
+# SPDX-License-Identifier: BSD-3-Clause
+
 add_executable(
         xheader_win32api_tests
 
