--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -48,6 +48,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y doxygen graphviz libwayland-dev wayland-protocols
 
+          wget https://apt.llvm.org/llvm.sh
+          chmod +x llvm.sh
+          sudo ./llvm.sh 21 all
+
       # We are configuring the project to get compile_commands.json file
       - name: Configure project
         run: |
